src/objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>AttachmentID__c</fullName>
        <label>AttachmentID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ObjectReferenceID__c</fullName>
        <description>A placeholder for relating to any SF object (by using Content Document LInk)</description>
        <label>ObjectReferenceID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ParentId__c</fullName>
        <label>ParentId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>appsolutely__Chamber_of_Commerce_Extract_Cached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if fetched Chamber of Commerce Extract is Cached or not.</description>
        <label>Chamber of Commerce Extract Cached</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>